recursion.logo.lessons.recursion.logo.koch.Crab.scala.error
Crab:7: error: not found: value snowSide
  snowSide(levels-1,length/Math.sqrt(2))
  ^Crab:9: error: not found: value snowSide
  snowSide(levels-1,length/Math.sqrt(2))
  ^Crab:11: error: not found: value snowSide
  snowSide(levels-1,length/Math.sqrt(2))
  ^Crab:13: error: not found: value snowSide
  snowSide(levels-1,length/Math.sqrt(2))
  ^