recursion.logo.lessons.recursion.logo.koch.Crab.scala.code
def crab(levels:Int, length:Double) {
  if (levels==0){
    avance(length)
    return
  }
  baisseCrayon()
  snowSide(levels-1,length/Math.sqrt(2))
  gauche(45)
  snowSide(levels-1,length/Math.sqrt(2))
  droite(90)
  snowSide(levels-1,length/Math.sqrt(2))
  gauche(45)
  snowSide(levels-1,length/Math.sqrt(2))
  leveCrayon()
}